# ZVOnok

./: .clang-format  .gitignore  CMakeLists.txt  README.md
client/: Audio.cpp  Audio.hpp  CMakeLists.txt  WebRTCAudio.cpp  WebRTCAudio.hpp  main.cpp  main_webrtc.cpp  run.sh
scripts/: install_deps.sh  test_webrtc.sh
server/: CMakeLists.txt  SignalingServer.cpp  SignalingServer.hpp  main.cpp  run.sh
